--- a/coppii.html
+++ b/coppii.html
@@ -28,7 +28,7 @@
                 <div class="text-center">
                     <p> <mark class="yellow">＃寵物友善餐廳</mark>  <mark class="yellow">＃創意義大利麵</mark>   <mark class="yellow">＃精緻早午餐</mark></p>
                     <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃免費充電</mark>   <mark class="yellow">＃眯眼小貓陪吃</mark></p>
-                    <p> <mark class="blue">Covid-19專區：5/24起，提供外帶自取全面7折優惠，內用座位暫不開放</mark>
+                    <p> <mark class="blue">Covid-19專區：每日營業時間為0900–1900，僅提供外帶，暫停內用服務</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
             <div class="container">
@@ -39,10 +39,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/11_1.jpeg" alt="11_1" />
+                                <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="coppii_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">店內有許多貓咪擺飾</div>
+                                <div class="portfolio-caption-subheading text-muted">工業風搭配木質裝潢低調沉穩又有氣質</div>
                             </div>
                         </div>
                     </div>
@@ -52,10 +52,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/11_2.jpeg" alt="11_2" />
+                                <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="coppii_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">巴東咖哩牛肉蛋奶麵</div>
+                                <div class="portfolio-caption-subheading text-muted">小法國</div>
                             </div>
                         </div>
                     </div>
@@ -65,10 +65,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/11_3.jpeg" alt="11_3" />
+                                <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
+                                <div class="portfolio-caption-subheading text-muted">今天是卡布其諾的心情</div>
                             </div>
                         </div>
                     </div>
