--- a/coppii.html
+++ b/coppii.html
@@ -23,11 +23,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Coppii Lumii living Coffee</h2>
-                    <h3 class="section-subheading text-muted">提供商業午餐、不收服務費的寵物友善餐廳</h3>
+                    <h3 class="section-subheading text-muted">Lumii帶著光明的字義，期待Coppii Lumii將為你成就很棒的事！</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃寵物友善餐廳</mark>  <mark class="yellow">＃創意義大利麵</mark>   <mark class="yellow">＃精緻早午餐</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃免費充電</mark>   <mark class="yellow">＃眯眼小貓陪吃</mark></p>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃免費充電</mark>   <mark class="yellow">＃</mark></p>
                     <p> <mark class="blue">Covid-19專區：每日營業時間為0900–1900，僅提供外帶，暫停內用服務</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
