--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <!-- Modal 2-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
