--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="..." />
                                     <div>
                                     <h4>南港展覽館站</h4>
-                                    <p>Coppii Lumii Living Coffee  <a href="coppii.html" target="_parent">link</a></p>
+                                    <p>  <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
                                     </div>
                                     <div>
                                     <h4>南港站</h4>
