--- a/index.html
+++ b/index.html
@@ -197,7 +197,13 @@
                         " alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>聚會、歡聚專區</h4>
+                                <h4>
+                                
+                                <br />
+                                聚會、歡聚專區
+                                <br />
+                                
+                            </h4>
                                 <h4 class="subheading">An Agency is Born</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">test test</p></div>
