--- a/index.html
+++ b/index.html
@@ -212,13 +212,9 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>
-                                
-                                <br />
-                                早午餐專區
-                                <br />
-                                
-                            </h4>
+                            <ul class="align-st">
+                                <h4>早午餐專區</h4>
+                            </ul>
                             </div>
                         </div>
                     </li>
